force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Cycle_Created_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Created_In__c</fullName>
    <formula>Embryo__r.Embryo_Created_In_Cycle__r.Cycle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Created In</label>
    <type>Text</type>
</CustomField>