force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Cycle_Transferred_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Transferred_In__c</fullName>
    <formula>Embryo__r.Embryo_Cycle_Transferred_In__r.Cycle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Transferred In</label>
    <type>Text</type>
</CustomField>