force-app/main/default/objects/Embryo_Cycle_Event__c/fields/D3_Assessment__c.field-meta.xml
<CustomField>
    <fullName>D3_Assessment__c</fullName>
    <formula>Embryo__r.Day_3_Cell_Number__c &amp; &quot; &quot; &amp; &quot;(&quot;&amp;TEXT(Embryo__r.Day_3_Fragmentation__c)&amp;&quot;)&quot;&amp;&quot;, &quot;&amp;TEXT(  Embryo__r.Day_3_Grade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D3 Assessment</label>
    <type>Text</type>
</CustomField>