force-app/main/default/objects/Embryo_Cycle_Event__c/fields/D6_Assessment__c.field-meta.xml
<CustomField>
    <fullName>D6_Assessment__c</fullName>
    <formula>Embryo__r.Day_6_Cell_Number__c &amp; &quot; &quot; &amp; &quot;(&quot;&amp;TEXT(Embryo__r.Day_6_Fragmentation__c)&amp;&quot;)&quot;&amp;&quot;, &quot;&amp;TEXT( Embryo__r.Day_6_Grade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D6 Assessment</label>
    <type>Text</type>
</CustomField>