force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Day_5_Fragmentation__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Fragmentation__c</fullName>
    <formula>TEXT(Embryo__r.Day_5_Fragmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 5 Fragmentation</label>
    <type>Text</type>
</CustomField>