force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Day_6_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Cell_Number__c</fullName>
    <formula>Embryo__r.Day_6_Cell_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 6 Cell Number</label>
    <type>Text</type>
</CustomField>