force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Fertilisation_Status__c.field-meta.xml
<CustomField>
    <fullName>Fertilisation_Status__c</fullName>
    <formula>TEXT( Embryo__r.Fertilisation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fertilisation Status</label>
    <type>Text</type>
</CustomField>