force-app/main/default/objects/Embryo_Cycle_Event__c/fields/PGT__c.field-meta.xml
<CustomField>
    <fullName>PGT__c</fullName>
    <formula>Embryo__r.PGT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGT?</label>
    <type>Checkbox</type>
</CustomField>