force-app/main/default/objects/Embryo_Cycle_Event__c/fields/PGT_Results__c.field-meta.xml
<CustomField>
    <fullName>PGT_Results__c</fullName>
    <formula>TEXT(Embryo__r.PGT_Result__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGT Results</label>
    <type>Text</type>
</CustomField>