force-app/main/default/objects/Embryo_Cycle_Event__c/fields/Static_Fate__c.field-meta.xml
<CustomField>
    <fullName>Static_Fate__c</fullName>
    <formula>IF(
    AND(
        TEXT(Embryo__r.Embryo_Status__c) = &quot;Transferred&quot;,
        Cycle__r.Id &lt;&gt; Embryo__r.Embryo_Cycle_Transferred_In__r.Id
    ),
    &quot;Frozen&quot;,
    IF(
        AND(
            NOT(ISBLANK(Embryo__r.Thaw_Date__c)),
            TEXT(Embryo__r.Embryo_Status__c) = &quot;Discarded&quot;,
            Cycle__r.Id = Embryo__r.Embryo_Cycle_Transferred_In__r.Id
        ),
        &quot;Frozen&quot;,
        TEXT(Embryo__r.Embryo_Status__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Fate</label>
    <type>Text</type>
</CustomField>